<resources>


    <string name="option_a"> A) </string>
    <string name="option_b"> B) </string>
    <string name="option_c"> C) </string>
    <string name="option_d"> D) </string>
    <string name="tick">✓</string>
    <string name="thumb_up">👍</string>
    <string name="cross">✗</string>
    <string name="app_name">Sample</string>
    <string name="background_image">Background Image</string>
</resources>
